fixed squished circle for ios

--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ span{
   height: 10px;
   width: 10px;
   border-radius: 50%;
+  box-sizing:border-box;
 }
 .circle:active{
   transform: scale(1.1);
